# shadowtagai-monorepo-v2

./: .ai-memory.md  .aiexclude  .aiignore  .all_hands_trigger  .antigravity-startup.sh  .antigravity-system-prompt.txt  .bazelignore  .bazeliskrc  .bazelrc  .betterleaks.toml  .betterleaksignore  .biomeignore  .bloat-allowlist  .bunfig.toml  .cinematic_trigger  .claude-shortcuts  .claude.md  .clineignore  .clinerules  .cursorrules  .cursorrules.md  .dockerignore  .dockerignore.cor17  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .firebaserc  .gcloudignore  .geminiignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitleaksignore.bak.20260418190156  .gitmodules  .gitnexusignore  .goosehints  .ignore  .lighthouserc.json  (+300 more)
.reference_repos/filesift/: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
antigravity-core/mcp/: .dockerignore  BUILD.bazel  Dockerfile  README.md  index.js  package-lock.json  package.json  test_client.ts
antigravity-core/mcp/playwright/: package.json
antigravity-core/mcp/scripts/: deploy-hardened.sh
antigravity-core/mcp/src/: index.ts  metrics-exporter.ts  observability.ts
antigravity-core/mcp/terraform/: main.tf
antigravity-core/mcp/tests/: purchaseWorkflowLicense.test.ts  verifySyntheticVideo.test.ts
apps/aiyou_stack/: BUILD.bazel  __init__.py  ane_bridge.py  main.py  mcp_memory_config.json  test_ane_bridge.py  zero_cpu_router.py  zod_schema.ts
apps/aiyou_stack/Pipeline/: README.md
apps/aiyou_stack/aiyou-api/: README.md
apps/aiyou_stack/aiyou-backend/: README.md
apps/aiyou_stack/aiyou-clients/: README.md
apps/aiyou_stack/aiyou-examples/: README.md
apps/aiyou_stack/aiyou-fastapi-services/: .aiexclude  .antigravity-startup.sh  .cursorrules  .dockerignore  .env.example  .env.shards_template  .env_mode  .eslintignore  .eslintrc.cjs  .gcloudignore  .gemini-extension.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  4_VECTOR_EXECUTION_SUMMARY.md  ACCESSIBILITY.md  AGENTS.md  AI-INFRASTRUCTURE-ARCHITECTURE-ANALYSIS.md  AIYOUJR_DOCTRINE.md  AIYOUJR_EXTENSION.md  AIYOUJR_INFRASTRUCTURE.md  ALL_GAPS_FIXED_SUMMARY.md  ANTIGRAVITY_HANDOFF.md  ANTIGRAVITY_OPERATING_DOCTRINE.md  ANTIGRAVITY_QUICK_REF.md  ANTIGRAVITY_STATE.md  ANTIGRAVITY_TRANSFER_PACKET_2025.md  API_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_EVOLUTION.md  AUTOGEN_MIGRATION.md  BENCHMARK_SWARM_VS_MANUAL.md  BRANCH_B_GAPS_FIXED.md  BUILD_TEGU_GAAS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_INTEGRATION.md  (+443 more)
apps/aiyou_stack/aiyou-frontend/: README.md
apps/aiyou_stack/aiyou-offline-appliance/: README.md
apps/aiyou_stack/aiyou-ui-kit/: README.md
apps/aiyou_stack/cosmic-crab-payload/: analytical_ingest.py  mock_contact_requests.csv
apps/aiyou_stack/nascent-apollo/: .gitignore  antigravity_gucci_setup.sh  extensions.sh  omega_automator.sh  service.yaml  setup_workstation.sh  startup.sh
apps/claurst/: BUILD.bazel  Cargo.toml
apps/claurst/src/: main.rs
apps/counselconduit/: .dockerignore  .env.example  .env.staging.template  BUILD.bazel  CHANGELOG.md  Claude_Code_6_atp519_scoring.py  Cor.Claude_Code_6_atp519_scoring.py  Cor_Claude_Code_6_atp519_scoring.py  Dockerfile  Procfile  __init__.py  cloud_armor_policy.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  docker-compose.dev.yml  firestore.indexes.json  judge6_atp519_scoring.py  mail_tasks.json  mail_templates.md  openapi.yaml  playwright.staging.config.ts  requirements.txt  simulate_webhook.py  vulture_whitelist.py
apps/headfade/: BUILD.bazel  DATABASE_SCHEMA.md  firestore.rules  jules-trigger.js  spanner_schema.ddl
infra/docker/: BUILD.bazel  Dockerfile.python-base  docker-compose.yml
scripts/: 11x_browser_extractor.py  ALL_UNACTIONED_ITEMS_EXECUTED.md  BUILD.bazel  Cor.Claude_Code_6.sh  FINAL_GO_LIVE_SEQUENCE.sh  FINAL_JULES_DEPLOYMENT_PROMPT.md  FINAL_JULES_DEPLOYMENT_TRIGGER.sh  HEADFADE_ROBUST_MEATWARE_EVICTION_PROMPT.md  NEXT_BATCH_EXECUTION.md  OWNERS  README.playwright.md  REAL_MAY12_PUBLIC_LAUNCH.sh  ROBUST_MEATWARE_EVICTION_PROMPT.md  adapter_hardening.py  adapter_only_hardening_audit.sh  add_copyright.py  aegaeon_drive_cache.py  ag_context_compactor.py  ag_env_injector.sh  agnt_rpc_bus.py  ai-test-changed.sh  ai-validate.sh  alert_circuit_breaker.json  alert_fallback_saturation.json  alert_uptime.json  alphaxiv_ingest_daemon.py  analyze-ingestion-layer.js  ane_beads_ingest.py  ane_budget.py  ane_demo_server.py  antigravity-preflight.sh  antigravity_auto_repair.py  antigravity_doctor.py  apfs_thinkback.sh  append_repos_to_manifest.py  apply_ingested_rules.py  apply_latest_pack.sh  apply_latest_pack_2.sh  apply_pnkln_pack.sh  apply_pomelli_patch.ts  (+522 more)
scripts/aiyou-stack-scripts/: audit_truth_surfaces.sh  incremental_push_90mb_resume.py  mission_trigger.py
scripts/async/: claude_async.sh
scripts/darwin/: install-kernel-primitives.sh  readonly-probe.sb
scripts/google-sheets-form/: appscript.js
scripts/hooks/: post-commit
scripts/ide-companion/: package-lock.json  server.js  test_client.js
scripts/intelligence_pipeline/: __init__.py  codebase_embedder.py  configure_compartments.py  cross_domain_matcher.py  domain_tagger.py  drive_embedder.py  gap_analyzer.py  github_sync.py  memory_injector.py  run_pipeline.py  synthesis_report.py
scripts/launchd/: com.pnkln.dream-consolidation.plist
scripts/legacy/: 1_architect.sh  RUN_STRIPE_SETUP.sh  app.py  setup.py
scripts/linters/: gemini_ingestion_linter.py
scripts/patches/: suppress-punycode-dep0040.js
scripts/ported_claude_controllers/: CommandQueueController.ts  InboxPollerController.ts  MainLoopModelController.ts  ReplBridgeController.ts  ScheduledTasksController.ts
scripts/raycast/: gca-pruner.sh  mole-clean.sh
scripts/tacsop/: ts_audit.sh
scripts/utils/: github_app_auth.py
scripts/vault/: __init__.py  intelligence_router.py  pathway_ingest.py  secret_manager_util.py  zero_trust_pipeline.py
tools/build_defs/: BUILD.bazel  biome_check.sh  bloat_gate.sh  buildifier_check.sh  dead_code_audit.sh  ruff_check.sh
(+45026 files in other folders)
