[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filesift"
version = "0.2.1"
description = "Intelligent file indexing and search system"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Roshun Sunder", email = "roshun.sunder@gmail.com"}
]
maintainers = [
    {name = "Roshun Sunder", email = "roshun.sunder@gmail.com"}
]
keywords = [
    "file-search",
    "semantic-search",
    "vector-search",
    "file-indexing",
    "code-search",
    "document-search",
    "faiss",
    "embeddings",
    "natural-language-search"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities"
]
urls = {Homepage = "https://github.com/roshunsunder/filesift"}
dependencies = [
    "faiss-cpu",
    "sentence-transformers<5",
    "transformers<5",
    "einops",
    "rank-bm25",
    "numpy",
    "requests",
    "click",
    "tqdm",
    "platformdirs",
    "tomli-w",
    "PyYAML",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
filesift = "filesift.cli.command:main"
filesift-mcp = "filesift.mcp.server:main"

[tool.setuptools.packages.find]
include = ["filesift*"]

[tool.setuptools.package-data]
filesift = ["_config/default_config.toml", "skills/**/*.md"]
