load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_binary(
    name = "claurst",
    srcs = ["src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "claurst_test",
    crate = ":claurst",
)
