[package]
name = "claurst"
version = "0.1.0"
edition = "2021"
description = "Rust-based agent execution loop for ShadowTagAI"
authors = ["ShadowTagAI <founder@shadowtagai.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "agent_loop"
harness = false
