# BUILD.bazel — apps/counselconduit/agents
# Phase 4: Agent orchestration (A2A lifecycle, vent mode)
# Owner: product

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//apps/counselconduit:__subpackages__"])

py_library(
    name = "agents",
    srcs = [
        "__init__.py",
        "orchestrator.py",
    ],
    deps = [
        "//apps/counselconduit/api",
    ],
)
