# BUILD.bazel — apps/counselconduit/models
# Phase 4: Data models and storage abstractions
# Owner: product

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//apps/counselconduit:__subpackages__"])

py_library(
    name = "models",
    srcs = [
        "kv_storage.py",
    ],
)
