# BUILD.bazel — apps/counselconduit/models
# Phase 7: Data models and storage abstractions — hermetic pip deps
# Owner: product

load("@rules_python//python:defs.bzl", "py_library")
load("@pypi//:requirements.bzl", "requirement")

package(default_visibility = ["//apps/counselconduit:__subpackages__"])

py_library(
    name = "models",
    srcs = [
        "kv_storage.py",
    ],
    deps = [
        requirement("pydantic"),
    ],
)

