# BUILD.bazel — apps/counselconduit/sandbox
# Phase 4: Sandboxed code execution (isolated runner)
# Owner: product

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//apps/counselconduit:__subpackages__"])

py_library(
    name = "sandbox",
    srcs = [
        "__init__.py",
        "runner.py",
    ],
)
