# BUILD.bazel — apps/counselconduit/tools
# Phase 4: SK Process event tool
# Owner: product

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//apps/counselconduit:__subpackages__"])

py_library(
    name = "tools",
    srcs = [
        "sk_process_event_tool.py",
    ],
)
