[package]
name = "gideon-cockpit"
version = "0.1.0"
edition = "2024"
description = "Gideon OS Tauri Cockpit — Biometric Airlock & Obsidian Daemon"
authors = ["ShadowTag-v2 <founder@shadowtagai.com>"]

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2" }
