[project]
name = "media-mcp-server"
version = "0.1.0"
description = "Media Generation MCP Server — Nano Banana Pro (Image) + Veo 3.1 (Video)"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.66.0",
    "google-cloud-storage>=2.0.0",
    "google-adk>=0.5.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
