[package]
name = "media-edge"
version = "0.1.0"
edition = "2021"
description = "Pingora-based HLS edge proxy with TinyUfo caching"
authors = ["PNKLN Team"]

[dependencies]
# Pingora core framework
pingora = "0.4"
pingora-core = "0.4"
pingora-proxy = "0.4"
pingora-http = "0.4"

# Caching
tinyufo = "0.3"

# GCS client
google-cloud-storage = "0.17"

# JWT authentication
jsonwebtoken = "9.3"

# Async runtime
tokio = { version = "1.41", features = ["full", "signal"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# HTTP types
http = "1.1"
bytes = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
