[project]
name = "kosmos-agent"
version = "0.1.0"
description = "Autonomous Kosmos-style agent for Google Cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
